Update FlatLaf, fix level meter timing issue